2015-11-22 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m (createDirectoryAtPath)
	Should return success even if all path components do exist, as by Apple spec.

2015-11-13 Riccardo Mottola <rm@gnu.org>

	* Source/NSRange.m: (NSRangeFromString)
	Parse length and location with scanInteger and not scanInt (suggested by Fred Kiefer to fix 64bit)

2015-11-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLElement.m: (insertChild:atIndex:) if the child already
	has a parent, detach from that before adding to the new parent.
	OSX compatibility fix.

2015-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m: When libxml2 is not enabled, create a
	stub class which will raise an exception on instantiation.

2015-10-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix for fastpath code for literal string
	comparison which was ignoring the case insensititve option.
	Problems spotted by Fred, triggered by a Testplant change.

2015-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: remove declaration of unused methods.

2015-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m: Fix retain/release error causing
	crash on failure to launch gdomap.

2015-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/GNUstepBase/GNUstep.h: Define __has_extension() if the
	compiler does not support it.
	* Headers/Foundation/NSObjCRuntime.h: Provide definitions for
	NS_ENUM and NS_OPTIONS.

2015-10-03  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSPropertyList.m (GSBinaryPLGenerator-storeCount:): Use
	0x12 instead of 0x13 for integer count.
	* Source/NSPropertyList.m (GSBinaryPLParser-readCountAt:): Handle
	0x12 correctly. Use same code for 0x13 to read old incorrect
	written data.
	Based on change by Josh Freeman <pikopixel@twilightedge.com>

2015-09-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSXMLParser.m:
	* Tests/base/NSXMLParser/ParseData/quoted-entities.result